@startuml

class User {
  +email : String
  +firstName : String
  +lastName : String
  +profilePicture : String
  +source: String
  +lastVisited: Date
  +favoriteRecipes: Recipe[]
  +userGroups : UserGroup[]
}

class UserGroup {
  +name : String
  +users : User[]
  +createdBy : User
  +recipeWriteAccess : Boolean
  +groupWriteAccess : Boolean
  +recipeAccess :RecipeAccess[]
}
class Ingredient {
  +amount : Number
  +unit : Unit
  +food : Food
  +details : String
}


class Recipe {
  +title : String
  +createdAt : Date
  +createdBy : User
  +difficulty : Number
  +pictures : String[]
  +servings : Number
  +tags : Tag[]
  +isPublic : Boolean
  +instructions : Instruction[]
  +notes : String
  +groupAccess : GroupAccess[]
  +cleanUploads(newImages : String[])
}


class Food {
  +name : String
  +foodType : FoodType
  +density : Number
  +nutrients : Nutrient[]
}

class Instruction {
    +description : String
    +InstructionType : InstructionType
}

class Tag {
  +name : String
  +color : String
}
class FoodType {
  +name : String
}

class InstructionType {
  +name : String
}

class Nutrient {
  +name : String
  +type : String
  +defaultUnit : Unit
}


class UnitType {
  +name : String
}
class Unit {
  +name : String
  +unitType : String
}


class AdminEmail {
  +email : String
}

Recipe --> Instruction
Recipe --> User
Recipe --> Ingredient
Recipe --> Tag
Recipe --> UserGroup
User --> Recipe
Ingredient --> Food
Ingredient --> Unit
Food --> Nutrient
UserGroup --> User
User--> UserGroup
UserGroup --> Recipe
FoodType <-- Food
Instruction --> InstructionType
Unit <-- Nutrient
Unit --> UnitType

@enduml
